--- a/templates/post.html
+++ b/templates/post.html
@@ -71,7 +71,7 @@
 							><a href="#" class="tag">#Tricks</a
 							><a href="#" class="tag">#Financial</a
 							><a href="#" class="tag">#Economy</a>
-						</div> -->
+						</div>
 						<div
 							class="posts-nav d-flex justify-content-between align-items-stretch flex-column flex-md-row"
 						>
@@ -101,129 +101,70 @@
 								<div class="icon next">
 									<i class="fa fa-angle-right"> </i></div
 							></a>
-						</div>
+						</div>  -->
 						<div class="post-comments">
 							<header>
 								<h3 class="h6">
 									Post Comments<span class="no-of-comments"
-										>(3)</span
+										>({{ post.comment.count }})</span
 									>
 								</h3>
 							</header>
+							{% for comment in post.get_comments %}
 							<div class="comment">
 								<div
 									class="comment-header d-flex justify-content-between"
 								>
 									<div class="user d-flex align-items-center">
 										<div class="image">
+											{% if comment.user.author %}
+											<img
+												src="{{ comment.user.author.profile_picture.url }}"
+												alt="..."
+												class="img-fluid rounded-circle"
+											/>
+											{% else %}
 											<img
 												src="{% static 'img/user.svg' %}"
 												alt="..."
 												class="img-fluid rounded-circle"
 											/>
+											{% endif %}
 										</div>
 										<div class="title">
-											<strong>Jabi Hernandiz</strong
-											><span class="date">May 2016</span>
+											<strong>
+												{{ comment.user.username }} </strong
+											><span class="date">
+												{{comment.timestamp|timesince}}
+												ago</span
+											>
 										</div>
 									</div>
 								</div>
 								<div class="comment-body">
 									<p>
-										Lorem ipsum dolor sit amet, consectetur
-										adipisicing elit, sed do eiusmod tempor
-										incididunt ut labore et dolore magna
-										aliqua. Ut enim ad minim veniam.
+										{{ comment.content }}
 									</p>
 								</div>
 							</div>
-							<div class="comment">
-								<div
-									class="comment-header d-flex justify-content-between"
-								>
-									<div class="user d-flex align-items-center">
-										<div class="image">
-											<img
-												src="{% static 'img/user.svg' %}"
-												alt="..."
-												class="img-fluid rounded-circle"
-											/>
-										</div>
-										<div class="title">
-											<strong>Nikolas</strong
-											><span class="date">May 2016</span>
-										</div>
-									</div>
-								</div>
-								<div class="comment-body">
-									<p>
-										Lorem ipsum dolor sit amet, consectetur
-										adipisicing elit, sed do eiusmod tempor
-										incididunt ut labore et dolore magna
-										aliqua. Ut enim ad minim veniam.
-									</p>
-								</div>
-							</div>
-							<div class="comment">
-								<div
-									class="comment-header d-flex justify-content-between"
-								>
-									<div class="user d-flex align-items-center">
-										<div class="image">
-											<img
-												src="{% static 'img/user.svg' %}"
-												alt="..."
-												class="img-fluid rounded-circle"
-											/>
-										</div>
-										<div class="title">
-											<strong>John Doe</strong
-											><span class="date">May 2016</span>
-										</div>
-									</div>
-								</div>
-								<div class="comment-body">
-									<p>
-										Lorem ipsum dolor sit amet, consectetur
-										adipisicing elit, sed do eiusmod tempor
-										incididunt ut labore et dolore magna
-										aliqua. Ut enim ad minim veniam.
-									</p>
-								</div>
-							</div>
+							{% endfor %}
 						</div>
+						{% if request.user.is_authenticated %}
 						<div class="add-comment">
 							<header>
 								<h3 class="h6">Leave a reply</h3>
 							</header>
-							<form action="#" class="commenting-form">
+							<form
+								method="POST"
+								action="."
+								class="commenting-form"
+							>
+								{% csrf_token %}
 								<div class="row">
-									<div class="form-group col-md-6">
-										<input
-											type="text"
-											name="username"
-											id="username"
-											placeholder="Name"
-											class="form-control"
-										/>
-									</div>
-									<div class="form-group col-md-6">
-										<input
-											type="email"
-											name="username"
-											id="useremail"
-											placeholder="Email Address (will not be published)"
-											class="form-control"
-										/>
-									</div>
 									<div class="form-group col-md-12">
-										<textarea
-											name="usercomment"
-											id="usercomment"
-											placeholder="Type your comment"
-											class="form-control"
-										></textarea>
+										{{ form }}
 									</div>
+
 									<div class="form-group col-md-12">
 										<button
 											type="submit"
@@ -235,6 +176,7 @@
 								</div>
 							</form>
 						</div>
+						{% endif %}
 					</div>
 				</div>
 			</div>
